- Added a setting to show a breath meter near the player instead or in addition to the one at the top of the screen when the player is inside liquids with an Air timer
- Stop Adjust In-Game Map Triggers now cause the minimap to immediately show updated entrances
- Tiles are no longer added on the In-Game map during a teleportation to another chapter using Teleport To Chapter Triggers
- Fixed a bug that prevented the "Golden Start With X" attributes to work correctly, removing abilities on room transition when holding a golden strawberry
- Fixed a bug that prevented Flag On Interact Triggers to work if their "Req Flags" attribute was left empty
- Fixed a bug that killed both Madeline and the Remote Drone at the same time if the player died while holding the drone
- Fixed a bug that could prevent Arrow Hints on the In-Game map to point to the correct direction when more than one is in the same chapter
- Fixed a bug that displayed secret rooms on the In-game map before the player enter them when the "Reveal Unexplored Rooms" attribute of the In-Game map Controller was set to true
- Fixed a bug that allowed Bombs to be used in liquids
- Fixed a bug that could prevent Heat Controllers with an empty Inactive Flag to work correctly
- Fixed a bug that allowed the player to fall trough jumpthru platforms while using the drone after transitionning to another room than the room the drone was spawned in
- Fixed a bug that caused bombs hold by the player to become invisible after transitioning to another room
- Fixed a crash when using the retry option in the pause menu while holding the drone
- Fixed a crash when closing the Binoculars from the Binoculars ability at the same time the player died

Version 1.0.63 :